--- a/_config.yml
+++ b/_config.yml
@@ -4,5 +4,4 @@ show_downloads: true
 google_analytics:
 theme: jekyll-theme-dinky
     remote_theme: pages-themes/dinky@v0.2.0
-    plugins:
-    - jekyll-remote-theme # add this line to the plugins list if you already have one
+    plugins: - jekyll-remote-theme # add this line to the plugins list if you already have one
